# LexerSearchUI

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: deploy.yml
src/: highlight_helper.js  io.rs  main.rs
