[package]
name = "LexerSearchUI"
version = "0.1.0"
edition = "2024"

[dependencies]
monaco = { version = "0.5.0", features = ["api", "yew-components"] }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.10"
wasm-bindgen = "0.2.108"
web-sys = {version = "0.3.85", features = ["HtmlSelectElement", "Navigator", "Clipboard"] }
js-sys = "0.3"

serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"]}
serde_yml = "0.0.12"
serde_json = "1.0.149"

lexer-search-lib = { path = "./LexerSearch/lexer-search-lib" }
zstd = "0.13.3"
serde-wasm-bindgen = "0.6.5"
base-x = "0.2.11"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
